Change some phrasing in latest post. Fix table width bug that caused problems on small screens.

--- a/sass/alex/_tables.scss
+++ b/sass/alex/_tables.scss
@@ -131,3 +131,14 @@ table {
     .span#{$i} { @include tableColumns($i); }
   }
 }
+
+@media screen and (max-width: 430px) {
+  .table {
+    table-layout: fixed;
+    @include box-sizing(border-box);
+    word-wrap:break-word;
+  }
+  th, td {
+    word-wrap:break-word;
+  }
+}
